# 03-arvit-voice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wendy.json
arvit_voice/: __init__.py  bedrock_llm.py  estop.py  main.py  pipeline.py
scripts/: container-down.sh  container-up.sh
tests/: test_voice.py
